--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,20 +3,27 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: circleci/python:3.8
+      - image: circleci/python:3.8  # Use Python 3.8 environment
     steps:
-      - checkout
+      - checkout  # Check out your code from GitHub
+
+      # Set up dependencies
       - run:
-          name: Install dependencies
+          name: Set up Python environment and install dependencies
           command: |
-            python -m pip install --upgrade pip
+            python -m venv venv
+            . venv/bin/activate
             pip install -r requirements.txt
+
+      # Run tests
       - run:
           name: Run Unit Tests
           command: |
-            python -m unittest TestTriangle
+            . venv/bin/activate
+            python -m unittest discover
+
 workflows:
   version: 2
-  test_workflow:
+  test:
     jobs:
       - test
