--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,14 +12,15 @@ jobs:
       - run:
           name: Install Dependencies
           command: |
-            pip install pytest
+            pip install -r requirements.txt
+            pip install unittest-xml-reporting
       - run:
           name: Create test-results directory
           command: mkdir -p test-results
       - run:
-          name: Run Tests
+          name: Run Unittests
           command: |
-            pytest --junitxml=test-results/results.xml TestTriangle.py
+            python -m unittest discover > test-results/results.xml
       - store_test_results:
           path: test-results
 
