--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,23 +9,12 @@ jobs:
       - image: cimg/python:3.10.2
     steps:
       - checkout
-      
-      # Create test-results directory
-      - run:
-          name: Create Test Results Directory
-          command: mkdir -p test-results
-      
-      # Install dependencies
       - run:
           name: Install Dependencies
           command: pip install -r requirements.txt
-      
-      # Run tests and generate XML output
       - run:
           name: Run Tests
-          command: python -m xmlrunner TestTriangle.py --output test-results/results.xml
-      
-      # Store test results
+          command: python TestTriangle.py
       - store_test_results:
           path: test-results
 
