--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,26 @@
 version: 2.1
+
 orbs:
-        python: circleci/python@2.0.1
+  python: circleci/python@2.0.1
+
 jobs:
-      build-and-test:
-        docker:
-          - image: cimg/python:3.10.2
-        steps:
-          - checkout
-          - run:
-              command: |
-                pip install pytest
-                pytest --junitxml=test-results/junit.xml TestTriangle.py
-          - store_test_results:
-              path: test-results
+  build-and-test:
+    docker:
+      - image: cimg/python:3.10.2
+    steps:
+      - checkout
+      
+      - run:
+          name: Install Dependencies and Run Tests
+          command: |
+            pip install pytest
+            pytest --junitxml=test-results/junit.xml TestTriangle.py
+            
+      - store_test_results:
+          path: test-results
 
-     workflows:
-        testing_triangles:
-          jobs:
-            - build-and-test
-
+workflows:
+  version: 2
+  testing_triangles:
+    jobs:
+      - build-and-test
